// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots app/pages/collectivite/AuditSuivi/FiltreOrdreDuJour Selection 1`] = `
<button
  aria-expanded={false}
  aria-label="ouvrir le menu"
  className="flex items-center px-4 py-1 text-left text-sm"
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  onMouseDown={[Function]}
  onPointerDown={[Function]}
>
  <span
    className="fr-fi-filter-fill fr-fi--sm fr-text-label--blue-france"
  >
     
    A discuter - Séance d'audit
  </span>
  <span
    className="fr-fi-arrow-down-s-line mt-1 ml-1 scale-90"
  />
</button>
`;

exports[`Storyshots app/pages/collectivite/AuditSuivi/FiltreOrdreDuJour Tous 1`] = `
<button
  aria-expanded={false}
  aria-label="ouvrir le menu"
  className="flex items-center px-4 py-1 text-left text-sm"
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  onMouseDown={[Function]}
  onPointerDown={[Function]}
>
  <span
    className="fr-fi-filter-line fr-fi--sm fr-text-label--blue-france"
  >
     
    A discuter - Séance d'audit
  </span>
  <span
    className="fr-fi-arrow-down-s-line mt-1 ml-1 scale-90"
  />
</button>
`;
